--- a/Quizzes/020.md
+++ b/Quizzes/020.md
@@ -1,4 +1,4 @@
-#quiz 0
+#quiz 020
 
 
 #paper solutions
@@ -6,9 +6,35 @@
 
 #code
 ```.py
+import random
+from matplotlib import pyplot as plt
 
+def produce(n,m,s):
+    X = []
+    Y = []
+    if s == 0:
+        out = 'invalid'
+    else:
+        out = "| x | y(x) |\n"
+        for i in range (n):
+            z = ((m/s)**2)/2
+            x = int(100*(random.random()))
+            y = x**z
+            out += f'| {x} | {y:.2f} |\n'
+            Y += [y]
+            X += [x]
+    return Y, X
+
+y, x = produce(5,3,2)
+print(f'{x},{y}')
+plt.plot(x,y,'or')
+plt.xlabel('X')
+plt.ylabel('Y')
+plt.title('y(x)')
+plt.show()
 ```
 
 ##Proof of work
+<img width="1470" alt="Screenshot 2024-11-09 at 8 12 27 PM" src="https://github.com/user-attachments/assets/fbd65952-2222-4b57-b43f-454f93bbfb45">
 
 ##Flow Chart
