--- a/Quizzes/021.md
+++ b/Quizzes/021.md
@@ -1,4 +1,4 @@
-#quiz 0
+#quiz 021
 
 
 #paper solutions
@@ -6,9 +6,27 @@
 
 #code
 ```.py
+from matplotlib import pyplot as plt
+import matplotlib
 
+plt.style.use('ggplot')
+matplotlib.use('macosx')
+
+start = -10
+step = (20/100)
+x, y = [], []
+
+for i in range(int(20/step)):
+    x.append(start + step*i)
+    y.append(2*(((start + step*i)+5)**2))
+
+plt.plot(x, y, 'turquoise')
+plt.xlabel('X')
+plt.ylabel('f(x)')
+plt.show()
 ```
 
 ##Proof of work
+<img width="1470" alt="Screenshot 2024-11-09 at 8 13 13 PM" src="https://github.com/user-attachments/assets/b766a424-aae6-4d51-a2c3-9d99f5ae89fd">
 
 ##Flow Chart
