--- a/Quizzes/022.md
+++ b/Quizzes/022.md
@@ -1,1 +1,33 @@
+#quiz 022
 
+
+#paper solutions
+
+
+#code
+```.py
+from matplotlib import pyplot as plt
+import matplotlib
+
+plt.style.use('ggplot')
+matplotlib.use('macosx')
+
+start = -10
+step = (20/100)
+x, y = [], []
+
+for i in range(int(20/step)):
+    x.append(start + step*i)
+    if x[i] < 0:
+        y.append(-(start + step*i))
+    else:
+        y.append((start + step*i))
+
+plt.plot(x, y, 'red') #'or' marker is a circle, color red, no line
+plt.show()
+```
+
+##Proof of work
+<img width="1470" alt="Screenshot 2024-11-09 at 8 14 32 PM" src="https://github.com/user-attachments/assets/3e67dd13-bd10-455a-8467-aaf12c4db2f0">
+
+##Flow Chart
