--- a/Quizzes/023.md
+++ b/Quizzes/023.md
@@ -1,4 +1,4 @@
-#quiz 0
+#quiz 023
 
 
 #paper solutions
@@ -6,9 +6,37 @@
 
 #code
 ```.py
+from matplotlib import pyplot as plt
+import matplotlib
+import numpy as np
+plt.style.use('ggplot')
+matplotlib.use('macosx')
 
+h = [57.0, 56.0, 57.0, 56.0, 55.0, 55.0, 54.0, 54.0, 54.0, 53.0, 53.0, 54.0, 53.0, 53.0, 52.0, 52.0, 51.0, 51.0, 51.0, 50.0, 50.0, 49.0, 50.0, 49.0, 49.0, 48.0, 49.0, 49.0, 48.0, 48.0, 48.0, 49.0]
+x = []
+
+
+
+for i in range (0, len(h)):
+    x_t = 10 * (i+1)
+    x.append(x_t)
+
+x_model = [min(x), max(x)]
+
+m,b = np.polyfit(x,h,1)
+
+h_model = [(min(x)*m+b), (max(x)*m+b)]
+
+plt.scatter(x, h)
+
+plt.plot(x_model, h_model,color = 'green')
+plt.xlabel('Minutes')
+plt.ylabel('Relative Humidity')
+
+plt.show()
 ```
 
 ##Proof of work
+<img width="1470" alt="Screenshot 2024-11-09 at 8 15 52 PM" src="https://github.com/user-attachments/assets/bfb885f7-94e9-4718-b173-66ba8a57ea29">
 
 ##Flow Chart
